--- a/templates/funcOv/index.html
+++ b/templates/funcOv/index.html
@@ -45,8 +45,8 @@
 -->
 
       <div class="jumbotron">
-        <h1>FuncOv</h1>
-        <h2>Functional Coverage made Easy</h2>
+        <h1>FunkOv</h1>
+        <h2>Funktional Coverage Made Easy</h2>
         <p class="lead">Something catchy here that makes people want to register</p>
         <a class="btn btn-lg btn-success" href="{% url 'registration_register' %}" role="button">Register</a>
         <a class="btn btn-lg btn-success" href="{% url 'auth_login' %}" role="button">Login</a>
