--- a/templates/funcOv/index.html
+++ b/templates/funcOv/index.html
@@ -31,7 +31,6 @@
   <body>
 
     <div class="container">
- <!--
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
@@ -40,9 +39,8 @@
             <li role="presentation"><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">FunkOv</h3>
       </div>
--->
 
       <div class="jumbotron">
         <h1>FunkOv</h1>
