--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -20,7 +20,7 @@
 
 
 {% block body_block %}
-        <form class="form-signin" method="post" action=".">
+        <form class="form-signin" method="post" action="/accounts/register/">
           <h2 class="form-signin-heading">Register Here</h2>
                 {% csrf_token %}
                 {{ form.as_p }}
