base.html and minor style changes

--- a/templates/funcOv/index.html
+++ b/templates/funcOv/index.html
@@ -1,79 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+{% extends 'funcOv/base.html' %}
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+{% load staticfiles %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../static/bootstrap-3.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+{% block content_block %}
 
-    <!-- Custom styles for this template -->
-    <link href="../../static/bootstrap-3.3.5/docs/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <h1>{{ h1 }}</h1>
+    <h2>{{ h2 }}</h2>
+    <p class="lead">{{ h3 }}</p>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../static/bootstrap-3.3.5/docs/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../static/bootstrap-3.3.5/docs/assets/js/ie-emulation-modes-warning.js"></script>
+    {% if user.is_authenticated %}
+      {% for label,url in buttons.items %}
+        <a class="btn btn-lg btn-success" href="{{ url }}" role="button">{{ label }}</a>
+      {% endfor %}
+    {% else %}
+      {% for label,url in buttons.items %}
+        <a class="btn btn-lg btn-success" href="{{ url }}" role="button">{{ label }}</a>
+      {% endfor %}
+    {% endif %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="{% url 'index' %}">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
-            {% if user.is_authenticated %}
-              <li role="presentation"><a href="{% url 'auth_logout' %}">Logout</a></li>
-            {% endif %}
-          </ul>
-        </nav>
-        <h3 class="text-muted">{{ title }}</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1>{{ h1 }}</h1>
-        <h2>{{ h2 }}</h2>
-        <p class="lead">{{ h3 }}</p>
-
-        {% if user.is_authenticated %}
-          {% for label,url in buttons.items %}
-            <a class="btn btn-lg btn-success" href="{{ url }}" role="button">{{ label }}</a>
-          {% endfor %}
-        {% else %}
-          {% for label,url in buttons.items %}
-            <a class="btn btn-lg btn-success" href="{{ url }}" role="button">{{ label }}</a>
-          {% endfor %}
-        {% endif %}
-      </div>
-
-<!--
-        <a class="btn btn-lg btn-success" href="{% url 'registration_register' %}" role="button">Register</a>
-        <a class="btn btn-lg btn-success" href="{% url 'auth_login' %}" role="button">Login</a>
--->
-
-      <footer class="footer">
-        <p>&copy; AgileSoC.com 2015</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../static/bootstrap-3.3.5/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+{% endblock %}
