--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,30 +1,32 @@
-{% extends "funcOv/base-form.html" %}
+{% extends "funcOv/base.html" %}
 
-<!--
-   <div class="container">
+{% load widget_tweaks %}
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
--->
+{% block content_block %}
+  <div style="margin: 0 auto; width:50%;">
+    <form class="form-signin" method="post" action="/accounts/register/">
+      <h2 class="form-signin-heading">Register Here</h2>
+        {% csrf_token %}
+        <p>
+          <label for="id_username" class="sr-only">User Name</label>
+          {% render_field form.username class+="form-control" placeholder+="Username" type+="text" %}
+          {{ form.username.errors }}
 
+          <label for="id_email" class="sr-only">Email</label>
+          {% render_field form.email class+="form-control" placeholder+="Email Address" type+="text"%}
+          {{ form.email.errors }}
 
-{% block body_block %}
-        <form class="form-signin" method="post" action="/accounts/register/">
-          <h2 class="form-signin-heading">Register Here</h2>
-                {% csrf_token %}
-                {{ form.as_p }}
+          <label for="id_password1" class="sr-only">Password</label>
+          {% render_field form.password1 class+="form-control" placeholder+="Password" type+="text" %}
+          {{ form.password1.errors }}
 
-                <input type="submit" value="Submit" />
-        </form>
+          <label for="id_password2" class="sr-only">Password</label>
+          {% render_field form.password2 class+="form-control" placeholder+="Confirm Password" type+="text" %}
+          {{ form.password2.errors }}
+
+          <button class="btn btn-lg btn-success btn-block" type="submit">Register</button>
+          <input type="hidden" name="next" value="{{ next }}" />
+        </p>
+    </form>
+  </div>
 {% endblock %}
