--- a/templates/funcOv/base.html
+++ b/templates/funcOv/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>FunkOv - Funktional Coverage Made Easy</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../static/bootstrap-3.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,23 +34,25 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation" class="active"><a href="{% url 'index' %}">Home</a></li>
             <li role="presentation"><a href="#">About</a></li>
             <li role="presentation"><a href="#">Contact</a></li>
+            {% if user.is_authenticated %}
+              <li role="presentation"><a href="{% url 'auth_logout' %}">Logout</a></li>
+            {% endif %}
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">FunkOv</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <a class="btn btn-lg btn-success" href="{% url 'auth_login' %}" role="button">Sign up today</a>
-        <a class="btn btn-lg btn-success" href="{% url 'auth_login' %}" role="button">Sign up today</a>
+
+        {% block content_block %}{% endblock %}
+
       </div>
 
       <footer class="footer">
-        <p>&copy; Company 2014</p>
+        <p>&copy; AgileSoC.com 2015</p>
       </footer>
 
     </div> <!-- /container -->
