--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,26 @@
-{% extends "funcOv/base-form.html" %}
+{% extends "funcOv/base.html" %}
 
-{% block body_block %}
-        <form class="form-signin" method="post" action=".">
-          <h2 class="form-signin-heading">Login</h2>
-                {% csrf_token %}
-                {{ form.as_p }}
+{% load widget_tweaks %}
 
-                <input type="submit" value="Log in" />
-                <input type="hidden" name="next" value="{{ next }}" />
-                </form>
+{% block content_block %}
 
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+  <div style="margin: 0 auto; width:50%;">
+    <form class="form-signin" method="post" action="/accounts/login/">
+      <h2 class="form-signin-heading">Please sign in</h2>
+
+      {% csrf_token %}
+        <label for="id_username" class="sr-only">User Name</label>
+        {% render_field form.username class+="form-control" type+="text" %}
+        {{ form.username.errors }}
+
+        <label for="password" class="sr-only">Password</label>
+        {% render_field form.password class+="form-control" %}
+        {{ form.password.errors }}
+
+        <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
+        <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+    <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+  </div>
+
 {% endblock %}
