--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -7,8 +7,9 @@
 
 <div class="bs-example">
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#sectionA">Section A</a></li>
-        <li><a data-toggle="tab" href="#sectionB">Section B</a></li>
+        <li class="active"><a data-toggle="tab" href="#sectionA">My Covergroup</a></li>
+        <li><a data-toggle="tab" href="#sectionB">Add Coverpoint</a></li>
+        <li><a data-toggle="tab" href="#sectionC">Add Cross Cover</a></li>
     </ul>
 </div>
 <!--
@@ -41,8 +42,12 @@
              </form>
         </div>
         <div id="sectionB" class="tab-pane fade">
-            <h3>Section B</h3>
-            <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+            <h3>Add Coverpoint</h3>
+            <p>Not quite working yet!</p>
+        </div>
+        <div id="sectionC" class="tab-pane fade">
+            <h3>Add Cross Cover</h3>
+            <p>Not quite working yet!</p>
         </div>
     </div>
 
