--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -18,6 +18,8 @@
     <!-- Custom styles for this template -->
     <link href="../../static/dist/css/jumbotron-narrow.css" rel="stylesheet">
 
+    <link href="../../static/dist/css/custom.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
