--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -28,19 +28,16 @@
           <h3>Bus Parameters</h3>
 
             {% for k,v in parameters.items %}
-            <div class="row">
-              <div class="col-md-6 col-md-offset-3">
-              <div class="input-group input-group-sm">
-                <input type="text" class="form-control" aria-label="..." placeholder="{{ v.name }}" readonly>
-                <div class="input-group-btn">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>
-                  <ul class="dropdown-menu">
-                    {% for val in v.values %}
-                      <li><a href="#">{{ val }}</a></li>
-                    {% endfor %}
-                  </ul>
+            <div class="form-inline">
+              <div class="form-group form-group-lg">
+                <div class="row">
+                    <input type="text" class="form-control" aria-label="..." placeholder="{{ v.name }}" readonly>
+                    <select class="form-control selectpicker" style="width:100px">
+                      {% for val in v.values %}
+                        <option>{{ val }}</option>
+                      {% endfor %}
+                    </select>
                 </div>
-              </div>
               </div>
             </div>
             {% endfor %}
