--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -49,7 +49,7 @@
             {% endif %}
           </ul>
         </nav>
-        <h3 class="text-muted">FunCov</h3>
+        <img src="../../static/images/funcov.png" alt="Mountain View" style="height:15%; width:15%">
       </div>
 
       {% block nav_block %}{% endblock %}
