--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -4,7 +4,7 @@
 
 {% block content_block %}
 
-    <h1>{{ h1 }}</h1>
+    <img src="../../static/images/funcov.png" style="height:50%; width:50%">
     <h2>{{ h2 }}</h2>
     <p class="lead">{{ h3 }}</p>
 
