--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -6,10 +6,11 @@
 
 <div class="bs-example">
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#covergroup">My Covergroup</a></li>
-        <li><a data-toggle="tab" href="#params">Bus Properties</a></li>
-        <li><a data-toggle="tab" href="#coverpoint">New Coverpoint</a></li>
-        <li><a data-toggle="tab" href="#cross">New Cross Cover</a></li>
+        <li id="nav-covergroup" class="active"><a data-toggle="tab" href="#covergroup">My Covergroup</a></li>
+        <li id="nav-params"><a data-toggle="tab" href="#params">Bus Properties</a></li>
+        <li id="nav-coverpoint"><a data-toggle="tab" href="#coverpoint">New Coverpoint</a></li>
+        <li id="nav-cross"><a data-toggle="tab" href="#cross">New Cross Cover</a></li>
+        <li id="nav-cross"><a data-toggle="tab" href="#covergroup">Ship It!</a></li>
     </ul>
 </div>
 
@@ -18,6 +19,18 @@
 
 
 {% block content_block %}
+
+    <script>
+      function next(tab) {
+        var nav = "#nav-" + tab;
+        var tab = "#" + tab;
+        $('#nav-covergroup').removeClass('active');
+        $(nav).addClass('active');
+        $('#covergroup').removeClass('active');
+        $(tab).addClass('active in');
+      }
+    </script>
+
     <form id="category_form" method="post" action="{% url 'editor' %}">
   
       {% csrf_token %}
@@ -50,12 +63,12 @@
               </table>
             </div>
           </div>
-
-          <input class="btn btn-lg btn-success" type="submit" name="submit" value="Download Covergroup" />
+          <a type="button" onClick="next('coverpoint')" class="btn btn-success btn-lg">New Coverpoint</a>
+          <a type="button" onClick="next('cross')" class="btn btn-success btn-lg">New Cross Cover</a>
         </div>
 
         <div id="params" class="tab-pane fade">
-          <h3>How is your {{ name }} interface configured?</h3>
+          <h3>How are your {{ name }} ports configured?</h3>
 
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
