--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -32,6 +32,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+<!--
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -42,6 +43,7 @@
       ga('send', 'pageview');
 
     </script>
+-->
   </head>
 
   <body>
@@ -57,6 +59,9 @@
 -->
             {% if user.is_authenticated %}
               <li role="presentation"><a href="{% url 'auth_logout' %}">Logout</a></li>
+            {% else %}
+              <li role="presentation" class="active"><a href="{% url 'auth_login' %}">Login</a></li>
+              <li role="presentation" class="active"><a href="{% url 'registration_register' %}">Register</a></li>
             {% endif %}
           </ul>
         </nav>
